--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,8 +1,6 @@
 pipeline{
     agent any
     environment{
-        VERSION = "1.${BUILD_ID}"
-        AUTHOR = credentials("AUTHOR")
         SECRET_KEY = credentials("SECRET_KEY")
     }
     stages{
@@ -10,10 +8,15 @@ pipeline{
             steps{
                 sh "bash jenkins/build_images.sh"
             }
-        }
-        stage("Deploy"){
+
+        stage("Configure Swarm"){
             steps{
-                sh "bash jenkins/deploy_compose.sh"
+                sh "/home/jenkins/.local/bin/ansible-playbook -i inventory playbook.yaml"
+            }
+        }
+        stage("Deploy application"){
+            steps{
+                sh "bash jenkins/deploy_stack.sh"
             }
         }
     }
