--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,30 @@
 version: '3.7'
 services:
   frontend_service:
+    build: ./service_1
     image: yyasin/frontend_service_image:latest
     deploy:
-      replicas: 1
+      replicas: 2
     ports:
     - target: 5000
       published: 5000
     
   location_service:
+    build: ./service_2
     image: yyasin/location_service_image:latest
     deploy:
-      replicas: 1
+      replicas: 2
 
   weather_service:
+    build: ./service_3
     image: yyasin/weather_service_image:latest
     deploy:
-      replicas: 1
+      replicas: 2
 
   movie_service:
+    build: ./service_4
     image: yyasin/movie_service_image:latest
     deploy:
-      replicas: 1
+      replicas: 2
     
 
