--- a/roles/swarm-init/tasks/main.yaml
+++ b/roles/swarm-init/tasks/main.yaml
@@ -1,4 +1,12 @@
-- name: Initialize swarm
-  community.general.docker_swarm:
-    state: present
-  register: swarm_info
+---
+  - name: Adding jenkins as user
+    user:
+      name: jenkins
+      groups: docker
+      shell: /bin/bash
+      append: true
+
+  - name: Initialize swarm
+    community.general.docker_swarm:
+      state: present
+    register: swarm_info
