--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline{
     agent any
     environment{
         SECRET_KEY = credentials("SECRET_KEY")
+        DATABASE_URI = credentials("DATABASE_URI")
     }
     stages {
         stage("Build and Push Images"){
