--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,14 +3,23 @@ pipeline{
     environment{
         SECRET_KEY = credentials("SECRET_KEY")
         DATABASE_URI = credentials("DATABASE_URI")
+        TEST_DATABASE_URI = credentials("TEST_DATABASE_URI") 
     }
     stages {
+        stage("Testing stage"){
+            steps{
+                script{
+                    if (env.rollback == 'false') {
+                        sh "bash jenkins/test.sh"
+                    }
+                }
+            }
+        }
         stage("Build and Push Images"){
             steps{
                 sh "bash jenkins/build_images.sh"
             }
         }
-
         stage("Configure Swarm"){
             steps{
                 sh "/home/jenkins/.local/bin/ansible-playbook -i inventory playbook.yaml"
