--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,4 +27,10 @@ pipeline{
             }
         }
     }
+    post{
+        always{
+            junit "**/junit.xml"
+            cobertura coberturaReportFile: '**/coverage.xml', failNoReports: false, failUnstable: false, onlyStable: false
+        }
+    }
 }
