--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,14 +2,20 @@ pipeline{
     agent any
     environment{
         SECRET_KEY = credentials("SECRET_KEY")
+        DATABASE_URI = credentials("DATABASE_URI")
+        TEST_DATABASE_URI = credentials("TEST_DATABASE_URI") 
     }
     stages {
+        stage("Testing stage"){
+            steps{
+                sh "bash jenkins/test.sh"
+            }
+        }
         stage("Build and Push Images"){
             steps{
                 sh "bash jenkins/build_images.sh"
             }
         }
-
         stage("Configure Swarm"){
             steps{
                 sh "/home/jenkins/.local/bin/ansible-playbook -i inventory playbook.yaml"
@@ -19,6 +25,12 @@ pipeline{
             steps{
                 sh "bash jenkins/deploy_stack.sh"
             }
+        }
+    }
+    post{
+        always{
+            junit "**/junit.xml"
+            cobertura coberturaReportFile: '**/coverage.xml', failNoReports: false, failUnstable: false, onlyStable: false
         }
     }
 }
